--- a/.travis.yml
+++ b/.travis.yml
@@ -5,15 +5,17 @@ before_install:
 - sudo apt-get install python-fontforge
 - cp /usr/lib/python2.7/dist-packages/fontforge.* "$HOME/virtualenv/python2.7.8/lib/python2.7/site-packages"
 install:
-# - export LD_LIBRARY_PATH=/usr/local/lib
 - pip install git+https://github.com/behdad/fontTools.git
 - pip install git+https://github.com/googlefonts/fontbakery-cli.git
 - pip install jinja2
 script: PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery.py .
 branches:
   only:
-    - master
+  - master
 after_script:
 - rm -rf builds/build/sources builds/build/build.state.yaml
 - PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH bakery-report.py builds/build
 - PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH travis-deploy.py
+env:
+  global:
+    secure: N5VQrEoyJcUZgX95mOvELhnMJS4Rj3PYwdDZ/SIxKiHlf8t4D1m2UyKLjAhge2p6eiEIxwPI0l+PHtoum8i6dV4R5uB2E0+RCdhFHwQutwFHAkL3+RbNq1FrRkYlv6N3Pibi8ECctY28EkWOppgS4PDAhENGVEEln2/bqgTN4UQ=
