--- a/.travis.yml
+++ b/.travis.yml
@@ -6,16 +6,20 @@ before_install:
 - cp /usr/lib/python2.7/dist-packages/fontforge.* "$HOME/virtualenv/python2.7.8/lib/python2.7/site-packages"
 install:
 - pip install git+https://github.com/behdad/fontTools.git
+- pip install git+https://github.com/googlefonts/fontcrunch.git
 - pip install git+https://github.com/googlefonts/fontbakery-cli.git
 - pip install jinja2
-script: PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery.py .
+before_script:
+- mkdir -p builds/build
+script: PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery.py . | tee builds/build/build.log
 branches:
   only:
   - master
 after_script:
-- rm -rf builds/build/sources builds/build/build.state.yaml
 - PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH bakery-report.py builds/build
+- rm -rf builds/build/sources
+- rm -rf builds/build/build.state.yaml
 - PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH travis-deploy.py
 env:
   global:
-    secure: N5VQrEoyJcUZgX95mOvELhnMJS4Rj3PYwdDZ/SIxKiHlf8t4D1m2UyKLjAhge2p6eiEIxwPI0l+PHtoum8i6dV4R5uB2E0+RCdhFHwQutwFHAkL3+RbNq1FrRkYlv6N3Pibi8ECctY28EkWOppgS4PDAhENGVEEln2/bqgTN4UQ=
+    secure: JH63Gvgfj5vchTcwdCXTbnoFdtFLYjAf42hQ+wW+ewZL9RnHTq6ZdDPUG9gEszlSqGviAbhKZjsNa9qC5MWTQFi6ofgbkepoxPl5r9aeNA04r8W3l6UjZO8gc0/B7XKEfm6BRyabilf/o9t/gymAa4LijcBBKvCBbjpUmgaKZdo=
