--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,8 @@ install:
 - pip install jinja2
 before_script:
 - mkdir -p builds/build
-script: PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery-build.py . 2>&1 | tee -a builds/build/buildlog.txt
+script: PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery-build.py .
+  2>&1 | tee -a builds/build/buildlog.txt
 branches:
   only:
   - master
@@ -22,4 +23,4 @@ after_script:
 - PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery-travis-deploy.py
 env:
   global:
-    secure: JH63Gvgfj5vchTcwdCXTbnoFdtFLYjAf42hQ+wW+ewZL9RnHTq6ZdDPUG9gEszlSqGviAbhKZjsNa9qC5MWTQFi6ofgbkepoxPl5r9aeNA04r8W3l6UjZO8gc0/B7XKEfm6BRyabilf/o9t/gymAa4LijcBBKvCBbjpUmgaKZdo=
+    secure: AAj2XVAQNiZKcX/OLChKvhMUQgQyAPI3kIKgdUlzKCPRvb5nXm+/m1fH6KgOgvyDbDcxu8BIAbTxRKqvwJli8nJF4+D4iO3yeYa0Hc+ccfTf/njLaFl9n1MPI+karenIJSX5AJuImBmEaLL/JSGKKR5EiygEyGoETnKjrkvlMFs=
